--- a/index.html
+++ b/index.html
@@ -65,60 +65,32 @@
  </div>   
 
  <main  class="container-fluid py4 #b47bca">
-   <div class="pagina-principal">
-    <h1>Elegí tus looks</h1>
-    <h2> INSPIRATE</h2>
-   </div>
-   <div class="textolook">
-    <div class="wrapper">
-     <p>
-      <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
-      <button class="btn btn-primary" type="button" data-bs-toggle="collapse"    data-bs-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
-     </p>
-     <div class="row">
-      <div class="col">
-       <div class="collapse multi-collapse" id="multiCollapseExample1">
-        <div class="card card-body">
-         Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
-        </div>
-       </div>
-     </div>
-     <div class="col">
-      <div class="collapse multi-collapse" id="multiCollapseExample">
-       <div class="card card-body">
-         Some placeholder content for the second collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
-       </div>
-      </div>
-     </div>
-    </div>
-    <img class="fotos-altas1" src=img/look-pantfluo.jpg alt="INSPIRACION LOOKS">
-     <p>
-      <a class="btn btn-primary" data-bs-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">¿TEAM COMFY?</a>
-     </p>
-    <div class="row">
-     <div class="col">
-      <div class="collapse multi-collapse" id="multiCollapseExample1">
-       <div class="card card-body">
-        Some placeholder content for the first collapse component of this multi-collapse example. This panel is hidden by default but revealed when the user activates the relevant trigger.
-      </div>
-     </div>
-    </div>
-    <div>
-     <img class="fotos-altas1" src=img/home-pants-topfluorose.jpg alt="INSPIRACION LOOKS">
-     <p>
-      <button class="btn btn-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseWidthExample" aria-expanded="false" aria-controls="collapseWidthExample">
-      ¿TEAM NIGHT?     
-    </button>
-     </p>
-     <div style="min-height: 120px;">
-      <div class="collapse collapse-horizontal" id="collapseWidthExample">
-       <div class="card card-body" style="width: 300px;">
-        This is some placeholder content for a horizontal collapse. It's hidden by default and shown when triggered.
-       </div>
-      </div>
-     </div>
-    </div>
+  <div class="pagina-principal">
+   <h1>Elegí tus looks</h1>
+   <h2> INSPIRATE</h2>
   </div>
+  <div>
+   <div class="row row-cols-1 row-cols-md-3 g-4 textolook">
+    <div class="col textolook" >
+     <div class="card h-100 textolook">
+      <img class="fotoshome" src="img/home-pants-topfluorose.jpg" class="card-img-top" alt="LOOK INSPIRACION">
+      <div class="card-body">
+       <h5 class="card-title">¿TEAM NIGHT?</h5>
+       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+     </div>
+    </div>
+    <div class="col">
+     <div class="card h-100">
+      <img class="fotoshome"src="img/look-pantfluo.jpg" class="card-img-top" alt="LOOK INSPIRACION">
+      <div class="card-body">
+        <h5 class="card-title">¿TEAM COMFY?</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer..
+        </p>
+       </div>
+      </div>
+     </div>
+    </div>
   <div  class="pagina-principal">
       <H2>LOOKS DE INSPIRACION</H2>
       <H3>ELEGI EL TUYO</H3>
