--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -67,7 +67,9 @@
   <div class="pagina-principal">
    <h1>Tus Complementos</h1>
    <h2> Se tú misma</h2>
-   <p>LOS ACCESORIOS COMPLETAN LOOKS TANTO CASUALES COMO FORMALES. TÚ PERSONALIDAD SE ELEVA AL AÑADIRLOS: UN PAÑUELO, UN GORRO,UNA BUFANDA, GAFAS Y COMPLEMENTOS PARA EL PELO QUE PONEN EL BROCHE FINAL A CUALQUIER OUTFIT. NUESTRA EDICIÓN ESTÁ PENSADA PARA AÑADIR UN DETALLE O PARA CAUSAR EL MÁXIMO IMPACTO COMBINANDO UNA O VARIAS PIEZAS. LA COLECCIÓN DE ACCESORIOS TE PERMITE IMAGINAR Y CREAR TU PROPIO LOOK. DESDE PULSERAS Y BRAZALETES HASTA CARTERAS Y CINTURONES</p>
+   <div class="parrafo">
+    <p >LOS ACCESORIOS COMPLETAN LOOKS TANTO CASUALES COMO FORMALES. TÚ PERSONALIDAD SE ELEVA AL AÑADIRLOS: UN PAÑUELO, UN GORRO,UNA BUFANDA, GAFAS Y COMPLEMENTOS PARA EL PELO QUE PONEN EL BROCHE FINAL A CUALQUIER OUTFIT. NUESTRA EDICIÓN ESTÁ PENSADA PARA AÑADIR UN DETALLE O PARA CAUSAR EL MÁXIMO IMPACTO COMBINANDO UNA O VARIAS PIEZAS. LA COLECCIÓN DE ACCESORIOS TE PERMITE IMAGINAR Y CREAR TU PROPIO LOOK. DESDE PULSERAS Y BRAZALETES HASTA CARTERAS Y CINTURONES</p>
+   </div>
   </div>
   <div class="pagina-principal">
     <div>
