--- a/pages/beauty.html
+++ b/pages/beauty.html
@@ -65,9 +65,10 @@
 
  <main>
    <div class="pagina-principal">
-    <h1>Elegí tus looks</h1>
-    <h2> INSPIRATE</h2>
+    <h1>Beauty Look</h1>
+    <h2> Sentite como si estuvieras de vacaciones.</h2>
    </div>
+   <h3>Llenate de energía y buen ánimo con las tendenciás supercoloridas SS23</h3>
    <div class="pagina-principal">
     <figure class="figure">
       <img  class="fotos-beauty"src="../img/unasprimaveramulticolor-pastel.jpg" alt="COLECCION">
@@ -129,6 +130,7 @@
       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
      </figure>
     </div> 
+    <h3>¿Qué perfume va bien con tu personalidad?</h3>
     <div>
      <figure class="figure">
       <img class="fotos-beauty1 efecto"src="../img/parfumairdigioia-acquadigioia-sundigioia.jpg" alt="COLECCION">
