--- a/pages/newin.html
+++ b/pages/newin.html
@@ -68,7 +68,8 @@
 
  <main >
   <div class="pagina-principal">
-   <h1 class="new-in" >Descubri las tendencias de la temporada</h1>     
+   <h1 class="new-in" >Descubri las tendencias de la temporada</h1> 
+   <h2>Este verano no pueden faltar en tu armario</h2>    
   </div>
   <div>
   <div class="card text-center">
