--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -101,32 +101,32 @@
   </div>
   <div class="pagina-principal promolooks">
    <figure class="figure">
-    <img class="fotos-promo " src= ../img/short-dorado-tucci.jpg alt="INSPIRACION LOOKS">
+    <img class="fotos-promo borderefect" src= ../img/short-dorado-tucci.jpg alt="INSPIRACION LOOKS">
     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
     <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
    </figure>
    <figure class="figure">
-    <img class="fotos-promo promo" src= ../img/promo-sacobeigepastel.jpg alt="INSPIRACION LOOKS">
+    <img class="fotos-promo promo borderefect" src= ../img/promo-sacobeigepastel.jpg alt="INSPIRACION LOOKS">
     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
     <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
    </figure>
    <figure class="figure">
-    <img class="fotos-promo promo" src= ../img/coleccion-joggingwhiterayonegro.jpg alt="INSPIRACION LOOKS">
+    <img class="fotos-promo promo borderefect" src= ../img/coleccion-joggingwhiterayonegro.jpg alt="INSPIRACION LOOKS">
     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
     <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
    </figure>
    <figure class="figure">
-    <img class="fotos-promo promo" src= ../img/promo-remerablackblock.jpg alt="INSPIRACION LOOKS">
+    <img class="fotos-promo promo borderefect" src= ../img/promo-remerablackblock.jpg alt="INSPIRACION LOOKS">
     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
     <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
    </figure>
    <figure class="figure">
-    <img class="fotos-promo promo" src= ../img/promo-look9.jpg alt="INSPIRACION LOOKS">
+    <img class="fotos-promo promo borderefect" src= ../img/promo-look9.jpg alt="INSPIRACION LOOKS">
     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
     <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
    </figure>
    <figure class="figure">
-    <img class="fotos-promo promo" src= ../img/promo-look16.jpg alt="INSPIRACION LOOKS">
+    <img class="fotos-promo promo borderefect" src= ../img/promo-look16.jpg alt="INSPIRACION LOOKS">
     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
     <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
    </figure>
