--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -75,107 +75,119 @@
     <h1>Elegí tus looks</h1>
     <h2> INSPIRATE</h2>
    </div>
-   <div class="container-fluid py5 px5">
-    <div class="wrapper1 fotoscoleccion row">
-     <div class="col-12 col-md6">
-      <figure class="figure">
-       <img class="fotos1"src="https://lh3.googleusercontent.com/p/AF1QipOYOVeEl9df4i2BX_SHNwT-xAJE6PSJ0DaZRigW=w768-h768-n-o-v1" alt="COLECCION">
-       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-      </figure>
-      <figure class="figure">
-       <img class="fotos1-altas" src="http://d3ugyf2ht6aenh.cloudfront.net/stores/001/012/978/products/g28a46121-d763a25b2a362a339e16608334184820-640-0.jpg" alt="COLECCION">
-       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-      </figure>
-      <figure class="figure">
-       <img class="fotos1-altas-2" src="../img/remerarockstar.jpg" alt="COLECCION">
-       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-      </figure>
-      <figure class="figure">
-       <img class="fotos1-alargadas" src="../img/coleccion-remeaerosmith..jpg" alt="COLECCION">
+   <div class="container text-center">
+    <div class="row">
+      <div class="col"><figure class="figure">
+      <img class="fotoscoleccion" class="figure-caption text-start" src="https://lh3.googleusercontent.com/p/AF1QipOYOVeEl9df4i2BX_SHNwT-xAJE6PSJ0DaZRigW=w768-h768-n-o-v1" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-      </figure>
-     </div>
-    </div>
-   </div>
-   <div class="wrapper1 fotoscoleccion row">
-    <div class="col-12 col-md6">
-     <figure class="figure">
-      <img class="fotos-cuadradas2"src="../img/remeraceratigiraahivamos.jpg" alt="COLECCION">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-     </figure>
-     <figure class="figure">
-      <img class="fotos-cuadradas2"src="../img/remeraceratibasement.jpg" alt="COLECCION">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-     </figure>
-     <figure class="figure">
-      <img class="fotos-cuadradas3" src="https://lh3.googleusercontent.com/p/AF1QipNR2LRLujV500dMuf4aV_Zc-yxy625jQ1kFH9nV=w1080-h608-p-no-v0" alt="COLECCION">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
     </div>
-   </div>
-   <div class="wrapper1 fotoscoleccion row">
-    <div class="col-12 col-md6">  
-     <figure class="figure">
-      <img class="fotos-cuadradas3"src=../img/coleccion-camisaconflorestranslucida.jpg alt="COLECCION">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-     </figure>
-    </div>
-    <div class="wrapper1 fotoscoleccion row">
-     <div class="col-12 col-md6">
-      <figure class="figure">
-       <img class="fotos-cuadradas3"src=../img/coleccion-look14.jpg alt="COLECCION">
-       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <div class="col"> <figure class="figure">
+        <img class="fotoscoleccion5" class="figure-caption text-start" src="http://d3ugyf2ht6aenh.cloudfront.net/stores/001/012/978/products/g28a46121-d763a25b2a362a339e16608334184820-640-0.jpg" alt="COLECCION">
+        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+        <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+       </figure></div>
+      <div class="col"><figure class="figure">
+        <img class="fotoscoleccion"  class="figure-caption text-start" src="../img/remerarockstar.jpg" alt="COLECCION">
+        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+        <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
-      <figure class="figure">
-       <img class="fotos-cuadradas-4"src=../img/coleccion-cardiganybiker2023.jpg alt="COLECCION">
-       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-      </figure>
-     </div>
     </div>
-    <div class="wrapper1 fotoscoleccion row">
-     <div class="col-12 col-md6">
-      <figure class="figure">
-       <img class="fotos-cuadradas-4"src=../img/coleccion-tenis-vestidocelestepastel.jpg alt="COLECCION">
-       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-      </figure>
-     </div>
     </div>
-    <div class="wrapper1 fotoscoleccion5 row">
-     <div class="col-12 col-md6">   
-      <figure class="figure">
-       <img class="fotos-cuadradas-5" src=../img/coleccion-camisaypantlila.jpg alt="COLECCION">
-       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-     </figure>
-     <figure class="figure">
-      <img class="fotos-cuadradas-5" src=../img/coleccion-pantfluorose.jpg alt="COLECCION">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-     </figure>
-     <figure class="figure">
-      <img class="fotos-cuadradas-5" src=../img/coleccion-2022.jpg alt="COLECCION">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-     </figure>
-     <figure class="figure">
-      <img class="fotos-cuadradas-5" src=../img/coleccion-marion-verdeagua.jpg alt="COLECCION">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-     </figure>
+    <div class="row">
+      <div class="col">
+        <figure class="figure">
+          <img class="fotoscoleccion" class="figure-caption text-start" src="../img/coleccion-remeaerosmith..jpg" alt="COLECCION">
+          <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+          <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+         </figure>
+        </div>
+      <div class="col">
+        <figure class="figure">
+          <img class="fotoscoleccion" class="figure-caption text-start"src="../img/remeraceratigiraahivamos.jpg" alt="COLECCION">
+          <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+          <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+         </figure>
+        </div>
+      <div class="col">
+        <figure class="figure">
+          <img class="fotoscoleccion" class="figure-caption text-start"src="../img/remeraceratibasement.jpg" alt="COLECCION">
+          <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+          <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+         </figure>
+        </div>
+        <div class="row">
+          <div class="row">
+
+      <div class="col">
+        <figure class="figure">
+          <img class="fotoscoleccion" class="figure-caption text-start" src="https://lh3.googleusercontent.com/p/AF1QipNR2LRLujV500dMuf4aV_Zc-yxy625jQ1kFH9nV=w1080-h608-p-no-v0" alt="COLECCION">
+          <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+          <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+         </figure>
+        </div>
     </div>
-   </div>
-  </div>
+    <div class="row">
+      <div class="col-8">
+        <figure class="figure">
+          <img class="fotoscoleccion" class="figure-caption text-start"src=../img/coleccion-camisaconflorestranslucida.jpg alt="COLECCION">
+          <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+          <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+         </figure>
+       </div>
+      <div class="col-4">
+        <figure class="figure">
+          <img class="fotoscoleccion" class="figure-caption text-start"src=../img/coleccion-look14.jpg alt="COLECCION">
+          <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+          <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+         </figure>
+       </div>
+    </div>
+    <div class="row">
+      <div class="col"> 
+       <figure class="figure">
+        <img class="fotoscoleccion" class="figure-caption text-start"src=../img/coleccion-cardiganybiker2023.jpg alt="COLECCION">
+        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+        <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+       </figure></div>
+    <div class="row">
+      <div class="col"> 
+        <figure class="figure">
+        <img class="fotoscoleccion" class="figure-caption text-start"src=../img/coleccion-tenis-vestidocelestepastel.jpg alt="COLECCION">
+        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+        <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+       </figure></div>
+       <div class="row">
+
+      <div class="col"> 
+       <figure class="figure">
+        <img class="fotoscoleccion" class="figure-caption text-start" src=../img/coleccion-camisaypantlila.jpg alt="COLECCION">
+        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+        <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+       </figure></div>
+      <div class="col"> 
+       <figure class="figure">
+        <img class="fotoscoleccion"  class="figure-caption text-start"src=../img/coleccion-banner2023.jpg alt="COLECCION">
+        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+        <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+       </figure>
+      </div>
+     <div class="row">
+      <div class="col-8">
+       <figure class="figure">
+        <img class="fotoscoleccion5" class="figure-caption text-start" src=../img/coleccion-2022.jpg alt="COLECCION">
+        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+        <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+       </figure></div>
+      <div class="col-4"> 
+       <figure class="figure">
+        <img class="fotoscoleccion5" class="figure-caption text-start" src=../img/coleccion-marion-verdeagua.jpg alt="COLECCION">
+        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+        <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+       </figure>
+      </div>
+    </div>
  </main>
  <hr>
   
