sabado de coder y commits

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -26,12 +26,7 @@
  </header>
    
  <nav id="nav" class="nav">
-   <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
-   <label for="abrir-cerrar" class="toggle-button">
-    <span class="cerrar" title="Cerrar">Cerrar</span>
-    <span class="abrir" title="Abrir">Abrir</span>
-   </label>
-   <!-- Listas y links de Navegación -->
+  <!-- Listas y links de Navegación -->
   <ul class="nav-menu color-primary">
    <li class="nav-menu-item">
     <a class="color-primary" href="../index.html">HOME </a>
@@ -75,8 +70,8 @@
     <div>
      <figure class="figure">
       <img  class="fotos-cuadradas11 zoom"src="../img/zara-sombreros-paja.jpg" alt="COLECCION">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+      <figcaption class="figure-caption text-start sm-p20px">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end sm-p20px">$PRECIO.</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-cuadradas11 zoom" src="../img/sobrederafiayellowline.jpg" alt="COLECCION">
@@ -195,9 +190,9 @@
     </div> 
     <div>
      <figure class="figure">
-      <img class="fotos-cuadradas12" src="../img/accesorios-gafasrojas.jpg" alt="COLECCION">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+      <img class="fotos-cuadradas12 sm-p20px h-64px w-60^%" src="../img/accesorios-gafasrojas.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start sm-p20px">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end sm-p20px">$PRECIO</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-cuadradas13 " src="../img/accesorios-gafasbatblack.jpg" alt="COLECCION">
@@ -205,9 +200,9 @@
       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
      <figure class="figure">
-      <img class="fotos-cuadradas1 zoom" src="../img/accesorios-viseras.jpg" alt="COLECCION">
-      <figcaption class="figure-caption text-start">PRODUCTO</figcaption>
-      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
+      <img class="fotos-cuadradas1 zoom sm-p20px" src="../img/accesorios-viseras.jpg" alt="COLECCION">
+      <figcaption class="figure-caption text-start sm-p20px">PRODUCTO</figcaption>
+      <figcaption class="figure-caption text-end sm-p20px">$PRECIO</figcaption>
      </figure>
     </div>
     <div>
