--- a/pages/beauty.html
+++ b/pages/beauty.html
@@ -26,11 +26,6 @@
  </header>
    
  <nav id="nav" class="nav">
-  <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
-  <label for="abrir-cerrar" class="toggle-button">
-   <span class="cerrar" title="Cerrar">Cerrar</span>
-   <span class="abrir" title="Abrir">Abrir</span>  
-  </label>
   <!-- Listas y links de Navegación -->
   <ul class="nav-menu color-primary">
    <li class="nav-menu-item">
@@ -66,68 +61,68 @@
  <main>
    <div class="pagina-principal">
     <h1>Beauty Look</h1>
-    <h2> Sentite como si estuvieras de vacaciones.</h2>
+    <h2 sm-p20px> Sentite como si estuvieras de vacaciones.</h2>
    </div>
    <h3>Llenate de energía y buen ánimo con las tendenciás supercoloridas SS23</h3>
    <div class="pagina-principal">
     <figure class="figure">
       <img  class="fotos-beauty"src="../img/unasprimaveramulticolor-pastel.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
      <figure class="figure">
       <img  class="fotos-beauty"src="../img/esmaltesveranopasteles.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-beauty" src="../img/colores-unas-moda.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-beauty" src="../img/unas-primavera-verano-abstractas-base-transparente.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-beauty2" src="../img/unas-para-verano-2022.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-beauty2"src="../img/unasveranobe.jpg" alt="COLECCIÓN">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-beauty2" src="../img/unascombinacionveranobe.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-beauty1 efecto" src="../img/unasazulbe.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
     </div>
     <div>
      <figure class="figure">
       <img class="fotos-beauty" src="../img/unasmetalizadasdecobe.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIOe.</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-beauty"src="../img/unasmetalizada.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
     </div>
     <div>
      <figure class="figure">
       <img class="fotos-beauty1 efecto"src="../img/unasesmalte-metalizado-efecto-espejo.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
     </div> 
     <h3>¿Qué perfume va bien con tu personalidad?</h3>
@@ -135,24 +130,24 @@
      <figure class="figure">
       <img class="fotos-beauty1 efecto"src="../img/parfumairdigioia-acquadigioia-sundigioia.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
     </div>
     <div>
      <figure class="figure">
       <img class="fotos-beauty2 "src="../img/parfunarmaniocean.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-beauty2"src="../img/parfumacquaverdedigioia.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
      <figure class="figure">
       <img class="fotos-beauty2" src="../img/parfumskydigioia2.jpg" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
     </div>
     <div class="pagina-principal">
@@ -160,83 +155,83 @@
       <figure class="figure">
        <img  class="fotos-beauty1 efecto"src="../img/beauty-maxmixbvlgary.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
      </div>
      <div>
       <figure class="figure">
        <img class="fotos-beauty" src="../img/beauty-parfumbvlgariomnia-pink-sapphire-2.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIOe.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty2" src="../img/beauty-parfumomnia-pink-sapphire.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
      </div>
      <div>
       <figure class="figure">
        <img  class="fotos-beauty2 zoom"src="../img/beauty-parfumbvlgariomnia-eau-de-toilette.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty zoom" src="../img/beauty-parfumbvlgariomniacrystaline-eau-de-toilette.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty2 zoom"src="../img/beauty-parfumbvlgariomnia-by-mary-katrantzou.jpg" alt="COLECCIÓN">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
      </div> 
      <div>
       <figure class="figure">
        <img class="fotos-beauty1 imagen" src="../img/beauty-cacharel2.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty2" src="../img/beauty-parfumcacharel.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty2" src="../img/beauty-flower--by-kenzo-eau-de-vie-eau-de-parfum.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty2" src="../img/beauty-kenzo.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty"src="../img/beauty-myway-giorgio.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty imagen"src="../img/beauty-parfumbeigecalvin.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty efecto"src="../img/parfumgivenchybordo.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty efecto"src="../img/beauty-parfumlinterditrojogivenchy.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty1"src="../img/parfumlinterdit.jpg" alt="COLECCION">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-beauty1 imagen" src="../img/beauty-parfumfragancias-de-Lacoste.jpg" alt="COLECCION">
