--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -28,11 +28,6 @@
  </header>
 
  <nav id="nav" class="nav">
-  <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
-  <label for="abrir-cerrar" class="toggle-button">
-   <span class="cerrar" title="Cerrar">Cerrar</span>
-   <span class="abrir" title="Abrir">Abrir</span>
-  </label>
   <!-- Listas y links de Navegación -->
   <ul class="nav-menu color-primary">
    <li class="nav-menu-item">
@@ -75,20 +70,20 @@
     <h1>Elegí tus looks</h1>
     <h2> INSPIRATE</h2>
    </div>
-   <div class="container text-center">
+   <div class="container text-center container-fluid">
     <div class="row">
-      <div class="col"><figure class="figure">
+      <div class="col12 md-6 sm-1"><figure class="figure">
       <img class="fotoscoleccion" class="figure-caption text-start" src="https://lh3.googleusercontent.com/p/AF1QipOYOVeEl9df4i2BX_SHNwT-xAJE6PSJ0DaZRigW=w768-h768-n-o-v1" alt="COLECCION">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
     </div>
-      <div class="col"> <figure class="figure">
+      <div class="col12 md-6 sm-1"> <figure class="figure">
         <img class="fotoscoleccion5" class="figure-caption text-start" src="http://d3ugyf2ht6aenh.cloudfront.net/stores/001/012/978/products/g28a46121-d763a25b2a362a339e16608334184820-640-0.jpg" alt="COLECCION">
         <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
         <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
        </figure></div>
-      <div class="col"><figure class="figure">
+      <div class="col12 md-6 sm-1"><figure class="figure">
         <img class="fotoscoleccion"  class="figure-caption text-start" src="../img/remerarockstar.jpg" alt="COLECCION">
         <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
         <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
@@ -96,21 +91,21 @@
     </div>
     </div>
     <div class="row">
-      <div class="col">
+      <div class="col12 md-6 sm-1">
         <figure class="figure">
           <img class="fotoscoleccion" class="figure-caption text-start" src="../img/coleccion-remeaerosmith..jpg" alt="COLECCION">
           <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
           <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
          </figure>
         </div>
-      <div class="col">
+      <div class="col12 md-6 sm-1">
         <figure class="figure">
           <img class="fotoscoleccion" class="figure-caption text-start"src="../img/remeraceratigiraahivamos.jpg" alt="COLECCION">
           <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
           <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
          </figure>
         </div>
-      <div class="col">
+      <div class="col12 md-6 sm-1">
         <figure class="figure">
           <img class="fotoscoleccion" class="figure-caption text-start"src="../img/remeraceratibasement.jpg" alt="COLECCION">
           <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
@@ -120,7 +115,7 @@
         <div class="row">
           <div class="row">
 
-      <div class="col">
+      <div class="col12 md-6 sm-1">
         <figure class="figure">
           <img class="fotoscoleccion" class="figure-caption text-start" src="https://lh3.googleusercontent.com/p/AF1QipNR2LRLujV500dMuf4aV_Zc-yxy625jQ1kFH9nV=w1080-h608-p-no-v0" alt="COLECCION">
           <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
@@ -129,14 +124,14 @@
         </div>
     </div>
     <div class="row">
-      <div class="col-8">
+      <div class="col12 md-6 sm-1">
         <figure class="figure">
           <img class="fotoscoleccion" class="figure-caption text-start"src=../img/coleccion-camisaconflorestranslucida.jpg alt="COLECCION">
           <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
           <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
          </figure>
        </div>
-      <div class="col-4">
+      <div class="col12 md-6 sm-1">
         <figure class="figure">
           <img class="fotoscoleccion" class="figure-caption text-start"src=../img/coleccion-look14.jpg alt="COLECCION">
           <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
@@ -145,14 +140,14 @@
        </div>
     </div>
     <div class="row">
-      <div class="col"> 
+      <div class="col12 md-6 sm-1"> 
        <figure class="figure">
         <img class="fotoscoleccion" class="figure-caption text-start"src=../img/coleccion-cardiganybiker2023.jpg alt="COLECCION">
         <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
         <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
        </figure></div>
     <div class="row">
-      <div class="col"> 
+      <div class="col12 md-6 sm-1"> 
         <figure class="figure">
         <img class="fotoscoleccion" class="figure-caption text-start"src=../img/coleccion-tenis-vestidocelestepastel.jpg alt="COLECCION">
         <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
@@ -160,13 +155,13 @@
        </figure></div>
        <div class="row">
 
-      <div class="col"> 
+      <div class="col12 md-6 sm-1"> 
        <figure class="figure">
         <img class="fotoscoleccion" class="figure-caption text-start" src=../img/coleccion-camisaypantlila.jpg alt="COLECCION">
         <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
         <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
        </figure></div>
-      <div class="col"> 
+      <div class="col12 md-6 sm-1"> 
        <figure class="figure">
         <img class="fotoscoleccion"  class="figure-caption text-start"src=../img/coleccion-banner2023.jpg alt="COLECCION">
         <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
@@ -174,13 +169,13 @@
        </figure>
       </div>
      <div class="row">
-      <div class="col-8">
+      <div class="col12 md-6 sm-1">
        <figure class="figure">
         <img class="fotoscoleccion5" class="figure-caption text-start" src=../img/coleccion-2022.jpg alt="COLECCION">
         <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
         <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
        </figure></div>
-      <div class="col-4"> 
+      <div class="col12 md-6 sm-1"> 
        <figure class="figure">
         <img class="fotoscoleccion5" class="figure-caption text-start" src=../img/coleccion-marion-verdeagua.jpg alt="COLECCION">
         <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
