--- a/index.html
+++ b/index.html
@@ -17,20 +17,15 @@
   <title>Be Yourself</title>
  </head>
  <body>
-  <header id="header">
+  <header id="header" >
    <div class="header-banner">
     <b> Envío gratis desde $10.000</b>
    </div>
    <!-- logo/Home -->
    <a href=""><img  id="logo-home" src= "img/faviconII200x100px.png" alt="BE"></a>
  </header>
- <div>
-  <nav id="nav"  class="nav">
-   <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
-   <label for="abrir-cerrar" class="toggle-button">
-    <span class="cerrar" title="Cerrar">Cerrar</span>
-    <span class="abrir" title="Abrir">Abrir</span>
-   </label>
+ 
+  </nav>
    <!-- Listas y links de Navegación -->
    <ul class="nav-menu">
     <li class="link">
@@ -64,7 +59,7 @@
   </nav>
  </div>   
 
- <main  class="container-fluid py4 #b47bca">
+ <main  class="container-fluid py4 ">
   <div class="pagina-principal">
    <h1>Elegí tus looks</h1>
    <h2> INSPIRATE</h2>
@@ -72,7 +67,7 @@
   <div>
    <div class="row row-cols-1 row-cols-md-3 g-4 textolook">
     <div class="col textolook" >
-     <div class="card h-100 textolook">
+     <div class="card h-100 sd-w70% textolook">
       <img class="fotoshome" src="img/home-pants-topfluorose.jpg" class="card-img-top" alt="LOOK INSPIRACION">
       <div class="card-body">
        <h5 class="card-title">¿TEAM NIGHT?</h5>
@@ -99,32 +94,32 @@
       <figure class="figure">
        <img class="fotos-altas rotar"  class="figure-caption text-start" src= img/look2.jpg alt="INSPIRACION LOOKS">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-altas rotar" class="figure-caption text-start" src=img/look3.jpg alt="INSPIRACION LOOKS">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-altas rotar" class="figure-caption text-start" src=img/look4.jpg alt="INSPIRACION LOOKS">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-altas rotar" class="figure-caption text-start" src= img/look5.jpg alt="INSPIRACION LOOKS">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
       <figure class="figure">
        <img class="fotos-altas rotar" class="figure-caption text-start" src= img/look6.jpg alt="INSPIRACION LOOKS">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure> 
       <figure class="figure">
        <img class="fotos-altas rotar" src= img/look7.jpg alt="INSPIRACION LOOKS">
        <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-       <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+       <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
       </figure>
      </div>
   </main>
