--- a/pages/newin.html
+++ b/pages/newin.html
@@ -24,13 +24,6 @@
   <!-- logo/Home -->
   <a href="../index.html"><img  id="logo-home" src= "../img/faviconII200x100px.png" alt="BE"></a>
  </header>  
-
- <nav id="nav" class="nav">
-  <input id="abrir-cerrar" name="abrir-cerrar" type="checkbox" value="" />
-  <label for="abrir-cerrar" class="toggle-button">
-   <span class="cerrar" title="Cerrar">Cerrar</span>
-   <span class="abrir" title="Abrir">Abrir</span>
-  </label>
   <!-- Listas y links de Navegación -->
   <ul class="nav-menu color-primary">
    <li class="nav-menu-item">
@@ -122,58 +115,67 @@
    </div>
   </div>
  
-   
-  <div class="pagina-principal">
+<div class="row">
+  <div class="col12 md-6 sm-1 ">
     <figure class="figure">
       <img class="fotos-newin" src= ../img/look-palazzo-rosa-yagmour-verano-2023.jpg alt="NEW IN">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
      </figure>
-     <figure class="figure">
-      <img class="fotos-newin1" src=../img/newin-pantsancho-vestir-assira-2023.jpg alt="NEW IN">
-      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-     </figure>
-     <figure class="figure">
+   </div>
+  <div class="col12 md-6 sm-1">
+    <figure class="figure">
       <img  class="fotos-newin"src= ../img/newinpantlila.jpg alt="NEW IN">
       <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-      <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-    </figure>
-    <figure class="figure">
-     <img class="fotos-newin1" src= ../img/newinblazerlila.jpg alt="NEW IN">
-     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-    </figure>
+      <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+     </figure>
    </div>
-   <div class="pagina-principal">
+</div>
+<div class="row">
+  <div class="col12 md-6 sm-1"> 
+   <figure class="figure">
+    <img class="fotos-newin" src= ../img/newinblazerlila.jpg alt="NEW IN">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure></div>
+<div class="row">
+  <div class="col12 md-6 sm-1"> 
     <figure class="figure">
-     <img  class="fotos-newin2"src=../img/newin-topnegro-pantsrosa.jpg alt="NEW IN">
-     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-    </figure>
-    <figure class="figure">
-     <img class="fotos-newin3"src=../img/newin-pantamarillopastel.jpg alt="NEW IN">
-     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-    </figure>
-   </div>
-   <div>
-    <figure class="figure">
-     <img class="fotos-newin4"src=../img/newin-naranjatotal.jpg alt="NEW IN">
-     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-    </figure>
-    <figure class="figure">
-     <img class="fotos-newin5"src=../img/newin-remerprimaverabeige.jpg alt="NEW IN">
-     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-    </figure>
-    <figure class="figure">
-     <img class="fotos-newin5"src=../img/newin-jeansmoda-2022.jpg alt="NEW IN">
-     <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
-     <figcaption class="figure-caption text-end">A caption for the above image.</figcaption>
-    </figure>
-   </div>
+      <img  class="fotos-newin"src=../img/newin-topnegro-pantsrosa.jpg alt="NEW IN">
+      <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure></div>
+   <div class="row">
+
+  <div class="col12 md-6 sm-1"> 
+   <figure class="figure">
+    <img class="fotos-newin"src=../img/newin-pantamarillopastel.jpg alt="NEW IN">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure></div>
+  <div class="col12 md-6 sm-1"> 
+   <figure class="figure">
+    <img class="fotos-newin"src=../img/newin-naranjatotal.jpg alt="NEW IN">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure>
+  </div>
+
+ <div class="row">
+  <div class="col12 md-6 sm-1">
+   <figure class="figure">
+    <img class="fotos-newin"src=../img/newin-remerprimaverabeige.jpg alt="NEW IN">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure></div>
+  <div class="col12 md-6 sm-1"> 
+   <figure class="figure">
+    <img class="fotos-newin"src=../img/newin-jeansmoda-2022.jpg alt="NEW IN">
+    <figcaption class="figure-caption text-start">A caption for the above image.</figcaption>
+    <figcaption class="figure-caption text-end">$PRECIO.</figcaption>
+   </figure>
+  </div>
+</div>
  </main>
 </div>
 
